logs/Slang/generated/keywords/5.6.2--keyword_unsigned.sv.log
name: keyword_unsigned
description: The 'unsigned' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_unsigned.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_unsigned.sv:8:17: error: expected declarator
    bit unsigned;
                ^
